--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.6
@@ -30,3 +32,4 @@ SQLAlchemy==1.4.31
 urllib3==1.26.8
 Werkzeug==1.0.1
 WTForms==2.3.3
+zipp==3.8.0
